<resources>
    <string name="app_name">Music Application</string>
    <string name="button_search">Search Devices</string>
    <string name="textview_empty">Nothing here</string>
    <string name="searching_devices">Searching for devices...</string>
    <string name="error">Error</string>
    <string name="enabling_blt">Enabling Bluetooth</string>
    <string name="failed_to_search">Failed to search Devices</string>
    <string name="try_again">Try again</string>
    <string name="none">None</string>
    <string name="failed_to_enable_bluetooth">Failed to enable Bluetooth</string>
    <string name="asking_to_connect">Asking to connect</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="reconnect">Reconnect</string>
    <string name="btn_Selection1">Option 1</string>
    <string name="btn_Selection2">Option 2</string>
    <string name="btn_play">Play</string>
    <string name="btn_stop">Stop</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="time_seconds">seconds</string>
</resources>
