<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/linearMusic"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_connect"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        android:background="#3fffffff">
        <kltn.musicapplication.views.ToggleButton
            android:id="@+id/tog_connect"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />
    </android.support.v7.widget.Toolbar>
    <kltn.musicapplication.views.ProgressBarIndeterminateDeterminate
        android:id="@+id/prog_toolbar_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">
    </kltn.musicapplication.views.ProgressBarIndeterminateDeterminate>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/linear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:background="#3fffffff"
                android:id="@+id/btn_reconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:enabled="false"
                android:text="@string/reconnect" />

            <Button
                android:background="#3fffffff"
                android:id="@+id/btn_clear"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:enabled="true"
                android:text="@string/clear" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtsettime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3fffff"
        android:padding="4dp"/>
    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingTop="6dip">

        <kltn.musicapplication.views.WaveformView android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <kltn.musicapplication.views.MarkerView
            android:id="@+id/startmarker"
            android:nextFocusDown="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_left"
            android:contentDescription="@string/start_marker" />

        <kltn.musicapplication.views.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="0dp"
            android:layout_y="188dp"
            android:contentDescription="@string/end_marker"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />

    </AbsoluteLayout>

    <TextView android:id="@+id/info"
        android:nextFocusUp="@+id/endmarker"
        android:nextFocusDown="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/AudioFileInfoOverlayText"
        android:gravity="center" />

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="58dip"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_load"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="LOAD" />

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:background="@drawable/background_button"
            android:contentDescription="@string/rewind"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:background="@drawable/background_button"
            android:contentDescription="@string/play"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:background="@drawable/background_button"
            android:contentDescription="@string/ffwd"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_next" />

        <Button
            android:id="@+id/btn_save"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="SAVE" />

    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />

    <TextView
        android:id="@+id/idtxtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3fffff"
        android:text="Effect:" />

    <RadioGroup
        android:id="@+id/radioButton"
        style="@style/ToolbarBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rd_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1" />

        <RadioButton
            android:id="@+id/rd_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="2" />
        <RadioButton
            android:id="@+id/rd_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="3" />

        <RadioButton
            android:id="@+id/rd_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="4" />
        <RadioButton
            android:id="@+id/rd_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="5" />

        <RadioButton
            android:id="@+id/rd_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="6" />
        <RadioButton
            android:id="@+id/rd_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="7" />

        <RadioButton
            android:id="@+id/rd_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="8" />
        <RadioButton
            android:id="@+id/rd_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="9" />

        <RadioButton
            android:id="@+id/rd_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="10" />
    </RadioGroup>

    <LinearLayout style="@style/HorizontalDividerBottom" />

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mark_start"
                android:text="@string/start_label"
                android:clickable="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:textAppearance="?android:textAppearanceSmall"/>

            <EditText android:id="@+id/starttext"
                android:inputType="number|numberDecimal"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:gravity="center"
                android:contentDescription="@string/start_label"
                android:textAppearance="?android:textAppearanceSmall"/>

            <TextView
                android:id="@+id/mark_end"
                android:text="@string/end_label"
                android:clickable="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:textAppearance="?android:textAppearanceSmall"/>

            <EditText android:id="@+id/endtext"
                android:inputType="number|numberDecimal"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:contentDescription="@string/end_label"/>

            <Button
                android:id="@+id/set_active"
                style="@android:style/MediaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="SET" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
